Removed non blurred background. Fixed issues with layout on phones and added shadow to text to make it easier to read.

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("../img/lynx.jpg");
+	background-image: url("../img/lynx_blur.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	padding-top: 70px;
